src/objects/Case_Product__c.object
<CustomObject>
    <description>Case_Product Junction table</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case_Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Only_unique_case_product_pairs_allowed__c</fullName>
        <description>Field, representing unique case product relationship ID.</description>
        <label>Only unique case product pairs allowed</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case_Products</relationshipLabel>
        <relationshipName>Case_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Case_Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>